Improve issues with solution space being clipped at the last rows/columns

--- a/static/css/visualizations.css
+++ b/static/css/visualizations.css
@@ -84,6 +84,8 @@
 	top: 40px;
 	left: 40px;
 	z-index: 2;
+	margin-bottom: 40px;
+	padding-right: 40px;
 }
 
 .spCell {
